
2019-03-06  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* reorganização dos includes

2019-02-28  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* solução definitiva para sombramento dos ícones, ajuste no label das aplicações

2019-02-27  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Update README
	* ajuste no blur do background

2019-02-26  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* ajustes nas funções auxiliares

2019-02-25  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* resolvido bug no sombreamento dos ícones
	* setando wallpaper corrente com efeito blur
	* colocando os ícones na escala correta de acordo com o tamanho da tela

2019-02-21  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* sigint_hendler log para syslog
	* trava para executar apenas uma instancia
	* falha de segmentação ao gerar icones com sombras, foi solucionada definitivamente

2019-02-20  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* solucionado problema com sombreamento dos icones
	* solucionado problema com icones ausentes devido bug no tema

2019-02-16  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Progresso na busca pelos nomes do ícones dentro dos .desktop

2019-02-15  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Lendo os paths dos icones
	* Start rename project to launchbox...

2018-03-19  acamargovieira <acamargo.vieira@gmail.com>

	* launchapps.c (lapps_application_icon): free gicon

2018-03-15  acamargovieira <acamargo.vieira@gmail.com>

	* Copyright update

2018-03-13  acamargovieira <acamargo.vieira@gmail.com>

	* Merge branch '2.0.0'
	* Changed the global variables to static

2018-03-12  acamargovieira <acamargo.vieira@gmail.com>

	* Merge branch '2.0.0'
	* Copyright update

2018-03-11  acamargovieira <acamargo.vieira@gmail.com>

	* Refactorings to decrease memory consumption
	* lappsutil.c (shadow_icon): icon size

2018-03-09  acamargovieira <acamargo.vieira@gmail.com>
